Fix newsletter alignment and add Instagram icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -1430,8 +1430,8 @@ img {
 .footer__newsletter {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  text-align: right;
+  align-items: flex-start;
+  text-align: left;
 }
 
 .footer__newsletter-lead {
@@ -1439,7 +1439,7 @@ img {
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
-  max-width: 450px;
+  max-width: 380px;
 }
 
 .footer__form {
@@ -1449,7 +1449,7 @@ img {
   gap: 0;
   margin-bottom: 16px;
   width: 100%;
-  max-width: 450px;
+  max-width: 380px;
 }
 
 .footer__input {
@@ -1492,7 +1492,7 @@ img {
   font-size: 12px;
   line-height: 18px;
   color: rgba(255, 255, 255, 0.85);
-  max-width: 450px;
+  max-width: 380px;
 }
 
 .footer__disclaimer a {
